@@ -233,7 +233,7 @@ int main(int argc, char *const argv[])
 
 		i = ttyreader_prepoll(&app);
 		i = aprsis_prepoll(&app);
-		i = rfbeacon_prepoll(&app);
+		i = beacon_prepoll(&app);
 		i = netax25_prepoll(&app);
 		i = erlang_prepoll(&app);
 		i = telemetry_prepoll(&app);
@@ -248,7 +248,7 @@ int main(int argc, char *const argv[])
 		now = time(NULL);
 
 
-		i = rfbeacon_postpoll(&app);
+		i = beacon_postpoll(&app);
 		i = ttyreader_postpoll(&app);
 		i = netax25_postpoll(&app);
 		i = aprsis_postpoll(&app);
